--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ input[type="checkbox"] {
   </div>
     <div class="checklist-item">
   <input type="checkbox" id="Cactus" class="item-checkbox"> 
-  <img src="CactusProduceicon.png" alt="A Cactus" class="icon"> 
+  <img src="CactusProduceIcon.png" alt="A Cactus" class="icon"> 
   <h1 class="text">Cactus</h1>
   </div>
     <div class="checklist-item">
