--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ input[type="checkbox"] {
   .gb {
   background-color: green;
   height: 55px; /* Adjust the height to your liking */
-  width: 100%;
+  max-width: 100%;
   position: fixed; /* This positions the element relative to the viewport */
   top: 0; /* This sticks the element to the top of the page */
   left: 0; /* This sticks the element to the left edge of the page */
