--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
-  <link href="https://fonts.cdnfonts.com/css/comic-neue-angular" rel="stylesheet">
   <style>
+@font-face {
+  font-family: 'Comic Neue Angular', sans-serif;
+  src: url('ComicNeue-Angular-Bold.ttf')
+  format ('truetype')
+  }
 body {
   background-color: #733F27;
   background-size: cover;
