--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 @font-face {
   font-family: 'Comic Neue Angular', sans-serif;
   src: url('ComicNeue-Angular-Bold.ttf')
-  format('truetype')
+  format('truetype');
   }
 body {
   background-color: #733F27;
   background-size: cover;
-    font-family: 'Comic Neue Angular', sans-serif;
-    color: white;
+  font-family: 'Comic Neue Angular', sans-serif;
+  color: white;
   margin-top: 50px;
 }
 .checklist-item {
