--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
 @font-face {
   font-family: 'Comic Neue Angular', sans-serif;
-  src: url('ComicNeue-Angular-Bold.ttf')
-  format('truetype');
+  src: url('ComicNeue-Angular-Bold.woff')
+  format ('woff');
   }
 body {
   background-color: #733F27;
