--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.cdnfonts.com/css/comic-neue-angular" rel="stylesheet">
   <style>
-@font-face {
-  font-family: 'Comic Neue Angular', sans-serif;
-  src: url('ComicNeue-Angular-Bold.woff')
-  }
 body {
   background-color: #733F27;
   background-size: cover;
