--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@ input[type="checkbox"] {
 }
   .gb {
   background-color: green;
-  height: 55px; /* Adjust the height to your liking */
-  width: 100%;
-  position: fixed; /* This positions the element relative to the viewport */
-  top: 0; /* This sticks the element to the top of the page */
-  left: 0; /* This sticks the element to the left edge of the page */
+  height: 40px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+.gb h1 {
+  margin: 0;
+  padding: 15px;
+  text-align: center;
 }
   </style>
   <title>Grow a Garden Checklist</title>
