--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@ input[type="checkbox"] {
   <h1 class="text">Carrot</h1>
   </div>
   <div class="checklist-item">
+  <input type="checkbox" id="Chocolate Carrot" class="item-checkbox">
+  <img src="Chocolate Carrot.png" class="icon">
+  <h1 class="text">Chocolate Carrot</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Spring Onion" class="item-checkbox">
+  <img src="Spring Onion.png" class="icon">
+  <h1 class="text">Spring Onion</h1>
+</div>
+  <div class="checklist-item">
   <input type="checkbox" id="Strawberry" class="item-checkbox"> 
   <img src="Strawberry.png" alt="A Strawberry" class="icon"> 
   <h1 class="text">Strawberry</h1>
