--- a/index.html
+++ b/index.html
@@ -87,6 +87,86 @@ input[type="checkbox"] {
   <img src="OrangeTulip.png" alt="An Orange Tulip" class="icon"> 
   <h1 class="text">Orange Tulip</h1>
   </div>
+<div class="checklist-item">
+  <input type="checkbox" id="Rose" class="item-checkbox">
+  <img src="Rose.png" class="icon">
+  <h1 class="text">Rose</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Flare Daisy" class="item-checkbox">
+  <img src="Flare Daisy.png" class="icon">
+  <h1 class="text">Flare Daisy</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Crown of Thorns" class="item-checkbox">
+  <img src="Crown of Thorns.png" class="icon">
+  <h1 class="text">Crown of Thorns</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Red Lollipop" class="item-checkbox">
+  <img src="Red Lollipop.png" class="icon">
+  <h1 class="text">Red Lollipop</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Glowpod" class="item-checkbox">
+  <img src="Glowpod.png" class="icon">
+  <h1 class="text">Glowpod</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Nightshade" class="item-checkbox">
+  <img src="Nightshade.png" class="icon">
+  <h1 class="text">Nightshade</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Lavender" class="item-checkbox">
+  <img src="Lavender.png" class="icon">
+  <h1 class="text">Lavender</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Manuka Flower" class="item-checkbox">
+  <img src="Manuka Flower.png" class="icon">
+  <h1 class="text">Manuka Flower</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Crocus" class="item-checkbox">
+  <img src="Crocus.png" class="icon">
+  <h1 class="text">Crocus</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Wild Carrot" class="item-checkbox">
+  <img src="Wild Carrot.png" class="icon">
+  <h1 class="text">Wild Carrot</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Stonebite" class="item-checkbox">
+  <img src="Stonebite.png" class="icon">
+  <h1 class="text">Stonebite</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Monoblooma" class="item-checkbox">
+  <img src="Monoblooma.png" class="icon">
+  <h1 class="text">Monoblooma</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Dezen" class="item-checkbox">
+  <img src="Dezen.png" class="icon">
+  <h1 class="text">Dezen</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Onion" class="item-checkbox">
+  <img src="Onion.png" class="icon">
+  <h1 class="text">Onion</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Artichoke" class="item-checkbox">
+  <img src="Artichoke.png" class="icon">
+  <h1 class="text">Artichoke</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Rhubarb" class="item-checkbox">
+  <img src="Rhubarb.png" class="icon">
+  <h1 class="text">Rhubarb</h1>
+</div>
     <div class="checklist-item">
   <input type="checkbox" id="Tomato" class="item-checkbox"> 
   <img src="Tomato.png" alt="A Tomato" class="icon"> 
