--- a/index.html
+++ b/index.html
@@ -182,6 +182,166 @@ input[type="checkbox"] {
   <img src="Daffodilfruiticon.png" alt="A Daffodil" class="icon"> 
   <h1 class="text">Daffodil</h1>
   </div>
+<div class="checklist-item">
+  <input type="checkbox" id="Raspberry" class="item-checkbox">
+  <img src="Raspberry.png" class="icon">
+  <h1 class="text">Raspberry</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Cauliflower" class="item-checkbox">
+  <img src="Cauliflower.png" class="icon">
+  <h1 class="text">Cauliflower</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Foxglove" class="item-checkbox">
+  <img src="Foxglove.png" class="icon">
+  <h1 class="text">Foxglove</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Horsetail" class="item-checkbox">
+  <img src="Horsetail.png" class="icon">
+  <h1 class="text">Horsetail</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Twisted Tangle" class="item-checkbox">
+  <img src="Twisted Tangle.png" class="icon">
+  <h1 class="text">Twisted Tangle</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Duskpuff" class="item-checkbox">
+  <img src="Duskpuff.png" class="icon">
+  <h1 class="text">Duskpuff</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Mandrake" class="item-checkbox">
+  <img src="Mandrake.png" class="icon">
+  <h1 class="text">Mandrake</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Canary Melon" class="item-checkbox">
+  <img src="Canary Melon.png" class="icon">
+  <h1 class="text">Canary Melon</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Flare Melon" class="item-checkbox">
+  <img src="Flare Melon.png" class="icon">
+  <h1 class="text">Flare Melon</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Glowshroom" class="item-checkbox">
+  <img src="Glowshroom.png" class="icon">
+  <h1 class="text">Glowshroom</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Mint" class="item-checkbox">
+  <img src="Mint.png" class="icon">
+  <h1 class="text">Mint</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Nectarshade" class="item-checkbox">
+  <img src="Nectarshade.png" class="icon">
+  <h1 class="text">Nectarshade</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Dandelion" class="item-checkbox">
+  <img src="Dandelion.png" class="icon">
+  <h1 class="text">Dandelion</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Succulent" class="item-checkbox">
+  <img src="Succulent.png" class="icon">
+  <h1 class="text">Succulent</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Bee Balm" class="item-checkbox">
+  <img src="Bee Balm.png" class="icon">
+  <h1 class="text">Bee Balm</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Pear" class="item-checkbox">
+  <img src="Pear.png" class="icon">
+  <h1 class="text">Pear</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Delphinium" class="item-checkbox">
+  <img src="Delphinium.png" class="icon">
+  <h1 class="text">Delphinium</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Peace Lily" class="item-checkbox">
+  <img src="Peace Lily.png" class="icon">
+  <h1 class="text">Peace Lily</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Liberty Lily" class="item-checkbox">
+  <img src="Liberty Lily.png" class="icon">
+  <h1 class="text">Liberty Lily</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Paradise Petal" class="item-checkbox">
+  <img src="Paradise Petal.png" class="icon">
+  <h1 class="text">Paradise Petal</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Serenity" class="item-checkbox">
+  <img src="Serenity.png" class="icon">
+  <h1 class="text">Serenity</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Zenflare" class="item-checkbox">
+  <img src="Zenflare.png" class="icon">
+  <h1 class="text">Zenflare</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Jalapeno" class="item-checkbox">
+  <img src="Jalapeno.png" class="icon">
+  <h1 class="text">Jalapeno</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Butternut Squash" class="item-checkbox">
+  <img src="Butternut Squash.png" class="icon">
+  <h1 class="text">Butternut Squash</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Aura Flora" class="item-checkbox">
+  <img src="Aura Flora.png" class="icon">
+  <h1 class="text">Aura Flora</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Blue Lollipop" class="item-checkbox">
+  <img src="Blue Lollipop.png" class="icon">
+  <h1 class="text">Blue Lollipop</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Broccoli" class="item-checkbox">
+  <img src="Broccoli.png" class="icon">
+  <h1 class="text">Broccoli</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Log Pumpkin" class="item-checkbox">
+  <img src="Log Pumpkin.png" class="icon">
+  <h1 class="text">Log Pumpkin</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Mutant Carrot" class="item-checkbox">
+  <img src="Mutant Carrot.png" class="icon">
+  <h1 class="text">Mutant Carrot</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Noble Flower" class="item-checkbox">
+  <img src="Noble Flower.png" class="icon">
+  <h1 class="text">Noble Flower</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Potato" class="item-checkbox">
+  <img src="Potato.png" class="icon">
+  <h1 class="text">Potato</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Purple Cabbage" class="item-checkbox">
+  <img src="Purple Cabbage.png" class="icon">
+  <h1 class="text">Purple Cabbage</h1>
+</div>
     <div class="checklist-item">
   <input type="checkbox" id="Watermelon" class="item-checkbox"> 
   <img src="WatermelonPlantPic.png" alt="A Watermelon" class="icon"> 
