--- a/index.html
+++ b/index.html
@@ -362,6 +362,56 @@ input[type="checkbox"] {
   <img src="Bamboofruiticon.png" alt="A Bamboo" class="icon"> 
   <h1 class="text">Bamboo</h1>
   </div>
+<div class="checklist-item">
+  <input type="checkbox" id="Rafflesia" class="item-checkbox">
+  <img src="Rafflesia.png" class="icon">
+  <h1 class="text">Rafflesia</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Green Apple" class="item-checkbox">
+  <img src="Green Apple.png" class="icon">
+  <h1 class="text">Green Apple</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Avocado" class="item-checkbox">
+  <img src="Avocado.png" class="icon">
+  <h1 class="text">Avocado</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Banana" class="item-checkbox">
+  <img src="Banana.png" class="icon">
+  <h1 class="text">Banana</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Lilac" class="item-checkbox">
+  <img src="Lilac.png" class="icon">
+  <h1 class="text">Lilac</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Lingon Berry" class="item-checkbox">
+  <img src="Lingon Berry.png" class="icon">
+  <h1 class="text">Lingon Berry</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Veinpetal" class="item-checkbox">
+  <img src="Veinpetal.png" class="icon">
+  <h1 class="text">Veinpetal</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Mangosteen" class="item-checkbox">
+  <img src="Mangosteen.png" class="icon">
+  <h1 class="text">Mangosteen</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Calla Lily" class="item-checkbox">
+  <img src="Calla Lily.png" class="icon">
+  <h1 class="text">Calla Lily</h1>
+</div>
+<div class="checklist-item">
+  <input type="checkbox" id="Willowberry" class="item-checkbox">
+  <img src="Willowberry.png" class="icon">
+  <h1 class="text">Willowberry</h1>
+</div>
     <div class="checklist-item">
   <input type="checkbox" id="Coconut" class="item-checkbox"> 
   <img src="Coconutfruiticon.png" alt="A Coconut" class="icon"> 
