--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ input[type="checkbox"] {
 </div>
 <div class="checklist-item">
   <input type="checkbox" id="Crown of Thorns" class="item-checkbox">
-  <img src="Crown of Thorns.png" class="icon">
+  <img src="Crown Of Thorns.png" class="icon">
   <h1 class="text">Crown of Thorns</h1>
 </div>
 <div class="checklist-item">
