--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html>
 <head>
 <link href="https://fonts.cdnfonts.com/css/comic-neue-angular" rel="stylesheet">
-  <link rel="manifest" href="manifest.json">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -48,6 +47,7 @@ input[type="checkbox"] {
 }
   </style>
   <title>Grow a Garden Checklist</title>
+  <link type="manifest" src="manifest.json">
 </head>
 <body>
   <div class="gb">
