--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ input[type="checkbox"] {
   </style>
   <title>Grow a Garden Checklist</title>
   <link type="manifest" src="manifest.json">
+  <meta name="theme-color" content="#733F27">
 </head>
 <body>
   <div class="gb">
