--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ input[type="checkbox"] {
 }
   </style>
   <title>Grow a Garden Checklist</title>
-  <link type="manifest" src="manifest.json">
+  <link type="manifest" href="/manifest.json">
   <meta name="theme-color" content="#733F27">
 </head>
 <body>
