--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <html>
 <head>
 <link href="https://fonts.cdnfonts.com/css/comic-neue-angular" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Grow a Garden Checklist</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#733F27">
   <style>
 body {
   background-color: #733F27;
@@ -46,9 +50,6 @@ input[type="checkbox"] {
   padding: 15px;
 }
   </style>
-  <title>Grow a Garden Checklist</title>
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#733F27">
 </head>
 <body>
   <div class="gb">
