--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Grow a Garden Checklist</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet"
-href="style.css">
+  <link rel="stylesheet" href="style.css">
   <meta name="theme-color" content="#733F27">
 </head>
 <body>
@@ -20,6 +19,7 @@ href="style.css">
   <div class="counter">
     <span id="checkedCount">0</span> / 
     <span id="totalCount">0</span>
+    <seed-search></seed-search>
   </div>
   <div class="checklist-item">
   <input type="checkbox" id="Carrot" class="item-checkbox"> 
@@ -631,5 +631,6 @@ href="style.css">
   <h1 class="text">Romanesco</h1>
   </div>
   <script src="savecheckbox.js"></script>
+  <script src="seed-search.js"></script>
 </body>
 </html>
