--- a/index.html
+++ b/index.html
@@ -630,5 +630,6 @@
   <h1 class="text">Romanesco</h1>
   </div>
   <script src="savecheckbox.js"></script>
+  <script src="reset-button.js"></script>
 </body>
 </html>
