--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div class="counter">
     <span id="checkedCount">0</span> / 
     <span id="totalCount">0</span>
+    <reset-button></reset-button>
   </div>
   <div class="checklist-item">
   <input type="checkbox" id="Carrot" class="item-checkbox"> 
