--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="text">GAG Checklist</h1>
   </div>
   <br>
-  <div class="counter">
+  <div class="counter" style="position: relative;">
     <span id="checkedCount">0</span> / 
     <span id="totalCount">0</span>
     <reset-button></reset-button>
