--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <div class="gb">
     <h1 class="text">GAG Checklist</h1>
+    <p>Version: fairy2509_alpha</p>
   </div>
   <br>
   <div style="position: relative;">
