--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   <div class="gb">
     <h2 class="text">GAG Checklist</h2>
-    <p>Version: fairy2509_alpha</p>
+    <p>Version:
+fairy2509_alpha</p>
   </div>
   <br>
   <div style="position: relative;">
